test/resources/parseErrors/ConditionalExpressionsPrecedence.java
class ConditionalExpressionsPrecedence {
    {
        int a = 10;
        int b = a == 9 ? 5 : a = 4;
    }
}